Fix overflow

--- a/source/styles/_base.scss
+++ b/source/styles/_base.scss
@@ -27,5 +27,4 @@ body > * {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  overflow: hidden;
 }
